Fix header spacing

--- a/src/styles/partials/header/_theme_switcher.scss
+++ b/src/styles/partials/header/_theme_switcher.scss
@@ -1,7 +1,7 @@
 [data-bs-theme-toggle] {
   cursor: pointer;
-  width: 3rem;
-  height: 3rem;
+  width: 1.5rem;
+  height: 1.5rem;
   display: flex;
   justify-content: center;
   align-items: center;
